--- a/src/partials/bose-ar.html
+++ b/src/partials/bose-ar.html
@@ -10,7 +10,7 @@
           at the same time.</p>
       </div>
       <div class="bose-ar__case">
-        <picture>
+        <picture class="bose-ar__picture">
           <source srcset="./image/desktop/bose-ar@desktop-1x.webp 1x,
                       ./image/desktop/bose-ar@desktop-2x.webp 2x" media="(min-width: 1200px)" />
           <source srcset="./image/table/bose-ar@table-1x.webp 1x,
