--- a/src/partials/guarantees.html
+++ b/src/partials/guarantees.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="guarantees__box">
       <div class="guarantees__boxes">
-        <picture>
+        <picture class="guarantees__picture">
           <source srcset="./image/desktop/guarantees@desktop-1x.webp 1x,
                       ./image/desktop/guarantees@desktop-2x.webp 2x" media="(min-width: 1200px)" />
           <source srcset="./image/table/guarantees@table-1x.webp 1x,
