--- a/src/partials/history.html
+++ b/src/partials/history.html
@@ -12,7 +12,7 @@
           <p class="history__content">From Amar's point of view, the sound was
             so flat and unnatural that it was better not to listen to the music at all than to listen to it in
             such a distorted form.</p>
-          <picture>
+          <picture class="history__picture">
             <source srcset="./image/desktop/creation-2@desktop-1x.webp 1x,
                           ./image/desktop/creation-2@desktop-2x.webp 2x" media="(min-width: 1200px)" />
             <source srcset="./image/table/creation-2@table-1x.webp 1x,
@@ -25,7 +25,7 @@
       </div>
       <div class="history__block">
         <div class="history__blocks">
-          <picture>
+          <picture class="history__pictures">
             <source srcset="./image/desktop/creation-1@desktop-1x.webp 1x,
                       ./image/desktop/creation-1@desktop-2x.webp 2x" media="(min-width: 1200px)" />
             <source srcset="./image/table/creation-1@table-1x.webp 1x,
