--- a/src/partials/luxury.html
+++ b/src/partials/luxury.html
@@ -1,7 +1,7 @@
 <section class="luxury">
   <div class="container">
     <h2 class="luxury__title">The luxury of silence</h2>
-    <picture>
+    <picture class="luxury__picture">
       <source srcset="./image/desktop/bg-luxury@desktop-1x.webp 1x,
           ./image/desktop/bg-luxury@desktop-2x.webp 2x" media="(min-width: 1200px)" />
       <source srcset="./image/table/bg-luxury@table-1x.webp 1x,
