--- a/src/sass/sections/_luxury.scss
+++ b/src/sass/sections/_luxury.scss
@@ -7,14 +7,24 @@
     }
 
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1330px) {
         padding-bottom: 170px;
+    }
+
+
+    &__picture{
+        margin-bottom: 32px;
+
+
+        @media screen and (min-width:1330px) {
+        margin-bottom: 50px;
+        }
     }
 
 
     &__title {
         width: 103%;
-        padding-bottom: 32px;
+        margin-bottom: 32px;
         color: #e7e7e7;
         font-size: 24px;
         font-weight: 600;
@@ -34,7 +44,7 @@
             }
 
              
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1330px) {
             font-size: 54px;
         letter-spacing: 1.08px;
         margin-right: 80px;
@@ -44,17 +54,10 @@
 
     }
 
-    &__photo {
-        margin-bottom: 32px;
-
-
-        @media screen and (min-width:1200px) {
-        margin-bottom: 50px;
-        }
-
-    }
+    &__photo {}
 
     &__box {
+        padding-top: 32px;
         display: flex;
         flex-direction: column;
         gap: 42px;
@@ -67,8 +70,9 @@
         gap: 60px;
     }
 
-    @media screen and (min-width:1200px) {
+    @media screen and (min-width:1330px) {
     gap: 40px;
+    padding-top: 50px;
     }
     }
 
@@ -84,7 +88,7 @@
         margin-bottom: 20px;
 
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1330px) {
                 font-size: 28px;
                 width: 412px;
                 height: 33px;
@@ -104,7 +108,7 @@
         }
 
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1330px) {
          font-size: 20px;
          width: 492px;
         }
