--- a/src/sass/sections/_guarantees.scss
+++ b/src/sass/sections/_guarantees.scss
@@ -7,7 +7,7 @@
     }
 
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1330px) {
         padding-bottom: 170px;
     }
 
@@ -23,7 +23,7 @@
         }
 
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1330px) {
          gap: 150px;
             
         }
@@ -36,24 +36,7 @@
     &__case {}
 
 
-    &__photo{
-        width: 280px;
-    height: 268px;
-
-        
-        @media screen and (min-width:768px) {
-            width: 354px;
-               height: 442px;     
-                } 
-
-
-        @media screen and (min-width:1200px) {
-       width: 590px;
-        height: 565px; 
-               
-           }
-        
-    }
+    &__photo{}
 
 
     &__title {
@@ -72,7 +55,7 @@
         }
 
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1330px) {
             font-size: 54px;
             letter-spacing: 1.08px;
             padding-top: 25px; 
@@ -94,7 +77,7 @@
         }
 
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1330px) {
             font-size: 28px;
 
             
@@ -117,7 +100,7 @@ width: 280px;
 }
 
 
-@media screen and (min-width:1200px) {
+@media screen and (min-width:1330px) {
 width: 400px;
 font-size: 20px;
 }
@@ -135,11 +118,31 @@ font-size: 20px;
     }
 
 
-    @media screen and (min-width:1200px) {
+    @media screen and (min-width:1330px) {
         margin-top: 50px;
         margin-bottom: 24px;
         
     }
+    }
+
+
+    &__picture{
+
+        width: 280px;
+    height: 268px;
+
+        
+        @media screen and (min-width:768px) {
+            width: 354px;
+               height: 442px;     
+                } 
+
+
+        @media screen and (min-width:1330px) {
+       width: 590px;
+        height: 565px; 
+               
+           }
     }
 
 
