--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,8 +1,9 @@
-<section class="reviews">
+<section class="reviews" id="reviews">
     <div class="container slider" id="slideContainer">
         <div class="slide show">
             <ul class="reviews__fix">
                 <li class="reviews__box">
+                    <h2 class="reviews__subtitle">REVIEWS</h2>
                     <iframe class="reviews__video" src="https://www.youtube.com/embed/VqP11Ma_2Fk"
                         title="Bose | Bose Noise Cancelling Headphones 700 | Everybody’s Talking" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -25,6 +26,7 @@
         <div class="slide">
             <ul class="reviews__fix">
                 <li class="reviews__box">
+                    <h2 class="reviews__subtitle">REVIEWS</h2>
                     <iframe class="reviews__video" src="https://www.youtube.com/embed/BUyLpf-u97Y"
                         title="Bose Noise Cancelling Headphones 700 | Design and innovation as one" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -46,6 +48,7 @@
         <div class="slide">
             <ul class="reviews__fix">
                 <li class="reviews__box">
+                    <h2 class="reviews__subtitle">REVIEWS</h2>
                     <iframe class="reviews__video" src="https://www.youtube.com/embed/NgtznBDFRUo"
                         title="Bose | Power of Sound - Open Your Heart and Mind with Infinite Possibilities"
                         frameborder="0"
@@ -68,6 +71,7 @@
          <div class="slide">
             <ul class="reviews__fix">
                 <li class="reviews__box">
+                    <h2 class="reviews__subtitle">REVIEWS</h2>
                     <iframe class="reviews__video" src="https://www.youtube.com/embed/VqP11Ma_2Fk"
                         title="Bose | Bose Noise Cancelling Headphones 700 | Everybody’s Talking" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -90,6 +94,7 @@
         <div class="slide">
             <ul class="reviews__fix">
                 <li class="reviews__box">
+                    <h2 class="reviews__subtitle">REVIEWS</h2>
                     <iframe class="reviews__video" src="https://www.youtube.com/embed/BUyLpf-u97Y"
                         title="Bose Noise Cancelling Headphones 700 | Design and innovation as one" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -111,6 +116,7 @@
         <div class="slide">
             <ul class="reviews__fix">
                 <li class="reviews__box">
+                    <h2 class="reviews__subtitle">REVIEWS</h2>
                     <iframe class="reviews__video" src="https://www.youtube.com/embed/NgtznBDFRUo"
                         title="Bose | Power of Sound - Open Your Heart and Mind with Infinite Possibilities"
                         frameborder="0"
