--- a/src/partials/bose-nc.html
+++ b/src/partials/bose-nc.html
@@ -3,6 +3,43 @@
         <ul class="bose-nc__flex position">
             <li>
                 <h2 class="bose-nc__title">BOSE NC 700</h2>
+                <div class="minicontainer">
+                    <div id="slideContainer" class="smart-tablet">
+                    <div class="slider">
+                        <div class="list">
+                            <div class="item slide show">
+                                <picture>
+                                    <source
+                                        srcset="./image/desktop/bose-nc-blakk@desktop-1x.webp 1x, ./image/desktop/bose-nc-blakk@desktop-2x.webp 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./image/table/bose-nc-black@table-1x.webp 1x, ./image/table/bose-nc-black@table-2x.webp 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./image/phone/bose-nc-black@phone-1x.webp 1x, ./image/phone/bose-nc-black@phone-2x.webp 2x"
+                                        media="(min-width: 320px)">
+                                    <img src="./image/desktop/bose-nc-blakk@desktop-2x.webp" alt="">
+                                </picture>
+                            </div>
+                            <div class="item slide">
+                                <picture>
+                                    <source
+                                        srcset="./image/desktop/bose-nc-white@desktop-1x.webp 1x, ./image/desktop/bose-nc-white@desktop-2x.webp 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./image/table/bose-nc-white@table-1x.webp 1x, ./image/table/bose-nc-white@table-2x.webp 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./image/phone/bose-nc-white@phone-1x.webp 1x, ./image/phone/bose-nc-white@phone-2x.webp 2x"
+                                        media="(min-width: 320px)">
+                                    <img src="./image/desktop/bose-nc-white@desktop-2x.webp" alt="">
+                                </picture>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                    
+                </div>
                 <div class="bose-nc__format-button">
                     <div class="bose-nc__border-1">
                         <button class="bose-nc__button-1">
@@ -51,7 +88,7 @@
                 </button>
             </li>
             <li>
-               <div id="slideContainer">
+                <div id="slideContainer" class="decktop">
                     <div class="slider">
                         <div class="list">
                             <div class="item slide show">
@@ -82,67 +119,11 @@
                                     <img src="./image/desktop/bose-nc-white@desktop-2x.webp" alt="">
                                 </picture>
                             </div>
-                            <div class="item slide">
-                                <picture>
-                                    <source
-                                        srcset="./image/desktop/bose-nc-blakk@desktop-1x.webp 1x, ./image/desktop/bose-nc-blakk@desktop-2x.webp 2x"
-                                        media="(min-width: 1200px)">
-                                    <source
-                                        srcset="./image/table/bose-nc-black@table-1x.webp 1x, ./image/table/bose-nc-black@table-2x.webp 2x"
-                                        media="(min-width: 768px)">
-                                    <source
-                                        srcset="./image/phone/bose-nc-black@phone-1x.webp 1x, ./image/phone/bose-nc-black@phone-2x.webp 2x"
-                                        media="(min-width: 320px)">
-                                    <img src="./image/desktop/bose-nc-blakk@desktop-2x.webp" alt="">
-                                </picture>
-                            </div>
-                            <div class="item slide">
-                                <picture>
-                                    <source
-                                        srcset="./image/desktop/bose-nc-white@desktop-1x.webp 1x, ./image/desktop/bose-nc-white@desktop-2x.webp 2x"
-                                        media="(min-width: 1200px)">
-                                    <source
-                                        srcset="./image/table/bose-nc-white@table-1x.webp 1x, ./image/table/bose-nc-white@table-2x.webp 2x"
-                                        media="(min-width: 768px)">
-                                    <source
-                                        srcset="./image/phone/bose-nc-white@phone-1x.webp 1x, ./image/phone/bose-nc-white@phone-2x.webp 2x"
-                                        media="(min-width: 320px)">
-                                    <img src="./image/desktop/bose-nc-white@desktop-2x.webp" alt="">
-                                </picture>
-                            </div>
-                            <div class="item slide">
-                                <picture>
-                                    <source
-                                        srcset="./image/desktop/bose-nc-blakk@desktop-1x.webp 1x, ./image/desktop/bose-nc-blakk@desktop-2x.webp 2x"
-                                        media="(min-width: 1200px)">
-                                    <source
-                                        srcset="./image/table/bose-nc-black@table-1x.webp 1x, ./image/table/bose-nc-black@table-2x.webp 2x"
-                                        media="(min-width: 768px)">
-                                    <source
-                                        srcset="./image/phone/bose-nc-black@phone-1x.webp 1x, ./image/phone/bose-nc-black@phone-2x.webp 2x"
-                                        media="(min-width: 320px)">
-                                    <img src="./image/desktop/bose-nc-blakk@desktop-2x.webp" alt="">
-                                </picture>
-                            </div>
-                            <div class="item slide">
-                                <picture>
-                                    <source
-                                        srcset="./image/desktop/bose-nc-white@desktop-1x.webp 1x, ./image/desktop/bose-nc-white@desktop-2x.webp 2x"
-                                        media="(min-width: 1200px)">
-                                    <source
-                                        srcset="./image/table/bose-nc-white@table-1x.webp 1x, ./image/table/bose-nc-white@table-2x.webp 2x"
-                                        media="(min-width: 768px)">
-                                    <source
-                                        srcset="./image/phone/bose-nc-white@phone-1x.webp 1x, ./image/phone/bose-nc-white@phone-2x.webp 2x"
-                                        media="(min-width: 320px)">
-                                    <img src="./image/desktop/bose-nc-white@desktop-2x.webp" alt="">
-                                </picture>
-                            </div>
                         </div>
                     </div>
                 </div>
+                <!-- </div> -->
             </li>
         </ul>
-    </div>
     </div>
 </section>
