--- a/src/sass/sections/_reviews.scss
+++ b/src/sass/sections/_reviews.scss
@@ -1,13 +1,26 @@
 .reviews {
-    margin-bottom: 170px;
+    margin-bottom: 52px;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media screen and (min-width:768px) {
+        margin-bottom: 100px;
+        width: 768px;
+    }
+
+    @media screen and (min-width:1200px) {
+        margin-bottom: 170px;
+        width: 1320px;
+    }
 
     &__box {
         // width: 920px;
         // height: 590px;
         flex-shrink: 0;
         overflow: hidden;
-        margin-right: 110px;
-        margin-left: -20px;
+        // margin-right: 150px;
+        margin-left: -17px;
     }
 
     // &__width {
@@ -33,16 +46,28 @@
 
     &__subtitle {
         color: #E7E7E7;
-        font-size: 54px;
-        margin-bottom: 50px;
+        font-size: 24px;
         font-style: normal;
         font-weight: 600;
         line-height: 120%;
-        /* 64.8px */
-        letter-spacing: 1.08px;
+        /* 28.8px */
+        margin-left: 15px;
+        letter-spacing: 0.48px;
         text-transform: uppercase;
+        margin-bottom: 32px;
 
-        @media screen and (min-width:768px) {}
+        @media screen and (min-width:768px) {
+            margin-bottom: 32px;
+            margin-right: 0;
+            color: #E7E7E7;
+            font-size: 30px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 120%;
+            /* 36px */
+            letter-spacing: 0.6px;
+            text-transform: uppercase;
+        }
 
         @media screen and (min-width:1200px) {
             display: none;
@@ -52,13 +77,13 @@
     &__s {
         color: #e4322f;
         font-family: "Roboto Condensed";
-        font-size: 28px;
+        font-size: 20px;
         font-style: normal;
         font-weight: 400;
         display: block;
         line-height: 125%;
         font-family: "Roboto Condensed";
-        font-size: 28px;
+        font-size: 20px;
         font-style: normal;
         font-weight: 400;
         margin-right: 10px;
@@ -66,79 +91,172 @@
         line-height: 125%;
         /* 35px */
         opacity: 1;
+
+        @media screen and (min-width:768px) {
+            color: #DF3D3A;
+            font-family: "Roboto Condensed";
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 400;
+            display: block;
+            line-height: 125%;
+            opacity: 1;
+        }
+
+        @media screen and (min-width:1200px) {
+            color: #DF3D3A;
+            font-family: "Roboto Condensed";
+            font-size: 28px;
+            font-style: normal;
+            font-weight: 400;
+            display: block;
+            line-height: 125%;
+            opacity: 1;
+        }
     }
 
     &__minisubtext {
-        color: #df3d3a83;
+        color: #DF3D3A;
         font-family: "Roboto Condensed";
-        font-size: 28px;
+        font-size: 20px;
         font-style: normal;
         font-weight: 400;
         display: block;
         line-height: 125%;
-        /* 35px */
+        opacity: 0.2;
+
+        @media screen and (min-width:768px) {
+            color: #DF3D3A;
+            font-family: "Roboto Condensed";
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 400;
+            display: block;
+            line-height: 125%;
+            opacity: 0.2;
+        }
+
+        @media screen and (min-width:1200px) {
+            color: #DF3D3A;
+            font-family: "Roboto Condensed";
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 400;
+            display: block;
+            line-height: 125%;
+            opacity: 0.2;
+        }
     }
 
     &__texted {
         color: #DF3D3A;
-        font-family: Gilroy;
-        font-size: 28px;
+        font-size: 20px;
         margin-bottom: 18px;
         font-style: normal;
         font-weight: 600;
         line-height: 125%;
+
+        @media screen and (min-width:1200px) {
+            font-size: 28px;
+        }
     }
 
     &__text {
+        max-width: 530px;
         color: rgba(255, 255, 255, 0.80);
-        font-family: Gilroy;
-        font-size: 20px;
+        font-size: 16px;
         font-style: normal;
-        margin-bottom: 90px;
+        margin-bottom: 30px;
         font-weight: 400;
         line-height: 145%;
+
+        @media screen and (min-width:1200px) {
+            margin-bottom: 90px;
+            font-size: 20px;
+        }
     }
 
     &__column-1 {
         display: flex;
-        align-items: end;
-        height: 35px;
+
+        @media screen and (min-width:768px) {
+            margin-bottom: 32px;
+            flex-shrink: 0;
+        }
+
+        @media screen and (min-width:1200px) {
+            display: flex;
+            align-items: end;
+            height: 12px;
+            margin-bottom: 0px;
+        }
     }
 
     &__column-2 {
         display: flex;
-        height: 149px;
-        align-items: end;
+
+        @media screen and (min-width:768px) {
+            margin-bottom: 32px;
+            flex-shrink: 0;
+            margin-bottom: 0px;
+        }
+
+        @media screen and (min-width:1200px) {
+            display: flex;
+            height: 149px;
+            align-items: end;
+            margin-bottom: 0px;
+        }
     }
 
     &__column-3 {
         display: flex;
-        height: 240px;
-        align-items: end;
+        // height: 240px;
+        // align-items: end;
+
+        @media screen and (min-width:768px) {
+            margin-bottom: 32px;
+        }
+
+        @media screen and (min-width:1200px) {
+            display: flex;
+            height: 149px;
+            align-items: end;
+        }
     }
 
     &__fix {
         display: flex;
         flex-direction: column;
 
+        @media screen and (min-width:768px) {
+            flex-shrink: 0;
+            gap: 32px;
+        }
+
+
         @media screen and (min-width:1200px) {
             flex-direction: row;
+            gap: 150px;
         }
     }
 
     &__video {
-        width: 280px;
+        width: 320px;
         height: 180px;
         flex-shrink: 0;
+        margin-left: 17px;
 
         @media screen and (min-width:768px) {
-            width: 648px;
+            width: 708px;
             height: 417px;
             flex-shrink: 0;
+            margin-right: 0;
+            margin-bottom: 0px;
         }
 
         @media screen and (min-width:1200px) {
-            width: 950px;
+            width: 840px;
             height: 590px;
             flex-shrink: 0;
             margin-bottom: -8px;
