--- a/src/sass/modals/_menu.scss
+++ b/src/sass/modals/_menu.scss
@@ -10,6 +10,7 @@
   box-shadow: 0px 20px 80px 0px #000;
   transform: translateY(-100%);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 9999999;
 
   &__box {
     display: flex;
