--- a/src/sass/sections/_header.scss
+++ b/src/sass/sections/_header.scss
@@ -6,7 +6,7 @@
   overflow: scroll;
   top: 0;
   left: 0;
-  z-index: 99999999;
+  z-index: 999;
 
  @media screen and (min-width: 320px) {
   padding-top: 30px;
