--- a/src/partials/bose-nc.html
+++ b/src/partials/bose-nc.html
@@ -5,40 +5,77 @@
                 <h2 class="bose-nc__title">BOSE NC 700</h2>
                 <div class="minicontainer">
                     <div id="slideContainer" class="smart-tablet">
-                    <div class="slider">
-                        <div class="list">
-                            <div class="item slide show">
-                                <picture>
-                                    <source
-                                        srcset="./image/desktop/bose-nc-blakk@desktop-1x.webp 1x, ./image/desktop/bose-nc-blakk@desktop-2x.webp 2x"
-                                        media="(min-width: 1200px)">
-                                    <source
-                                        srcset="./image/table/bose-nc-black@table-1x.webp 1x, ./image/table/bose-nc-black@table-2x.webp 2x"
-                                        media="(min-width: 768px)">
-                                    <source
-                                        srcset="./image/phone/bose-nc-black@phone-1x.webp 1x, ./image/phone/bose-nc-black@phone-2x.webp 2x"
-                                        media="(min-width: 320px)">
-                                    <img src="./image/desktop/bose-nc-blakk@desktop-2x.webp" alt="">
-                                </picture>
-                            </div>
-                            <div class="item slide">
-                                <picture>
-                                    <source
-                                        srcset="./image/desktop/bose-nc-white@desktop-1x.webp 1x, ./image/desktop/bose-nc-white@desktop-2x.webp 2x"
-                                        media="(min-width: 1200px)">
-                                    <source
-                                        srcset="./image/table/bose-nc-white@table-1x.webp 1x, ./image/table/bose-nc-white@table-2x.webp 2x"
-                                        media="(min-width: 768px)">
-                                    <source
-                                        srcset="./image/phone/bose-nc-white@phone-1x.webp 1x, ./image/phone/bose-nc-white@phone-2x.webp 2x"
-                                        media="(min-width: 320px)">
-                                    <img src="./image/desktop/bose-nc-white@desktop-2x.webp" alt="">
-                                </picture>
+                        <div class="slider">
+                            <div class="list">
+                                <div class="item slide show">
+                                    <picture>
+                                        <source
+                                            srcset="./image/table/bose-nc-black@table-1x.webp 1x, ./image/table/bose-nc-black@table-2x.webp 2x"
+                                            media="(min-width: 768px)">
+                                        <source
+                                            srcset="./image/phone/bose-nc-black@phone-1x.webp 1x, ./image/phone/bose-nc-black@phone-2x.webp 2x"
+                                            media="(min-width: 320px)">
+                                        <img src="./image/table/bose-nc-black@table-2x.webp" alt="">
+                                    </picture>
+                                </div>
+                                <div class="item slide">
+                                    <picture>
+                                        <source
+                                            srcset="./image/table/bose-nc-white@table-1x.webp 1x, ./image/table/bose-nc-white@table-2x.webp 2x"
+                                            media="(min-width: 768px)">
+                                        <source
+                                            srcset="./image/phone/bose-nc-white@phone-1x.webp 1x, ./image/phone/bose-nc-white@phone-2x.webp 2x"
+                                            media="(min-width: 320px)">
+                                        <img src="./image/table/bose-nc-black@table-2x.webp" alt="">
+                                    </picture>
+                                </div>
+                                <div class="item slide">
+                                    <picture>
+                                        <source
+                                            srcset="./image/table/bose-nc-black@table-1x.webp 1x, ./image/table/bose-nc-black@table-2x.webp 2x"
+                                            media="(min-width: 768px)">
+                                        <source
+                                            srcset="./image/phone/bose-nc-black@phone-1x.webp 1x, ./image/phone/bose-nc-black@phone-2x.webp 2x"
+                                            media="(min-width: 320px)">
+                                        <img src="./image/table/bose-nc-black@table-2x.webp" alt="">
+                                    </picture>
+                                </div>
+                                <div class="item slide">
+                                    <picture>
+                                        <source
+                                            srcset="./image/table/bose-nc-white@table-1x.webp 1x, ./image/table/bose-nc-white@table-2x.webp 2x"
+                                            media="(min-width: 768px)">
+                                        <source
+                                            srcset="./image/phone/bose-nc-white@phone-1x.webp 1x, ./image/phone/bose-nc-white@phone-2x.webp 2x"
+                                            media="(min-width: 320px)">
+                                        <img src="./image/table/bose-nc-black@table-2x.webp" alt="">
+                                    </picture>
+                                </div>
+                                <div class="item slide">
+                                    <picture>
+                                        <source
+                                            srcset="./image/table/bose-nc-black@table-1x.webp 1x, ./image/table/bose-nc-black@table-2x.webp 2x"
+                                            media="(min-width: 768px)">
+                                        <source
+                                            srcset="./image/phone/bose-nc-black@phone-1x.webp 1x, ./image/phone/bose-nc-black@phone-2x.webp 2x"
+                                            media="(min-width: 320px)">
+                                        <img src="./image/table/bose-nc-black@table-2x.webp" alt="">
+                                    </picture>
+                                </div>
+                                <div class="item slide">
+                                    <picture>
+                                        <source
+                                            srcset="./image/table/bose-nc-white@table-1x.webp 1x, ./image/table/bose-nc-white@table-2x.webp 2x"
+                                            media="(min-width: 768px)">
+                                        <source
+                                            srcset="./image/phone/bose-nc-white@phone-1x.webp 1x, ./image/phone/bose-nc-white@phone-2x.webp 2x"
+                                            media="(min-width: 320px)">
+                                        <img src="./image/table/bose-nc-black@table-2x.webp" alt="">
+                                    </picture>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    </div>
-                    
                 </div>
                 <div class="bose-nc__format-button">
                     <div class="bose-nc__border-1">
@@ -95,13 +132,7 @@
                                 <picture>
                                     <source
                                         srcset="./image/desktop/bose-nc-blakk@desktop-1x.webp 1x, ./image/desktop/bose-nc-blakk@desktop-2x.webp 2x"
-                                        media="(min-width: 1200px)">
-                                    <source
-                                        srcset="./image/table/bose-nc-black@table-1x.webp 1x, ./image/table/bose-nc-black@table-2x.webp 2x"
-                                        media="(min-width: 768px)">
-                                    <source
-                                        srcset="./image/phone/bose-nc-black@phone-1x.webp 1x, ./image/phone/bose-nc-black@phone-2x.webp 2x"
-                                        media="(min-width: 320px)">
+                                        media="(min-width: 1320px)">
                                     <img src="./image/desktop/bose-nc-blakk@desktop-2x.webp" alt="">
                                 </picture>
                             </div>
@@ -109,13 +140,39 @@
                                 <picture>
                                     <source
                                         srcset="./image/desktop/bose-nc-white@desktop-1x.webp 1x, ./image/desktop/bose-nc-white@desktop-2x.webp 2x"
-                                        media="(min-width: 1200px)">
+                                        media="(min-width: 1320px)">
+                                    <img src="./image/desktop/bose-nc-white@desktop-2x.webp" alt="">
+                                </picture>
+                            </div>
+                            <div class="item slide">
+                                <picture>
                                     <source
-                                        srcset="./image/table/bose-nc-white@table-1x.webp 1x, ./image/table/bose-nc-white@table-2x.webp 2x"
-                                        media="(min-width: 768px)">
+                                        srcset="./image/desktop/bose-nc-blakk@desktop-1x.webp 1x, ./image/desktop/bose-nc-blakk@desktop-2x.webp 2x"
+                                        media="(min-width: 1320px)">
+                                    <img src="./image/desktop/bose-nc-blakk@desktop-2x.webp" alt="">
+                                </picture>
+                            </div>
+                            <div class="item slide">
+                                <picture>
                                     <source
-                                        srcset="./image/phone/bose-nc-white@phone-1x.webp 1x, ./image/phone/bose-nc-white@phone-2x.webp 2x"
-                                        media="(min-width: 320px)">
+                                        srcset="./image/desktop/bose-nc-white@desktop-1x.webp 1x, ./image/desktop/bose-nc-white@desktop-2x.webp 2x"
+                                        media="(min-width: 1320px)">
+                                    <img src="./image/desktop/bose-nc-white@desktop-2x.webp" alt="">
+                                </picture>
+                            </div>
+                            <div class="item slide">
+                                <picture>
+                                    <source
+                                        srcset="./image/desktop/bose-nc-blakk@desktop-1x.webp 1x, ./image/desktop/bose-nc-blakk@desktop-2x.webp 2x"
+                                        media="(min-width: 1320px)">
+                                    <img src="./image/desktop/bose-nc-blakk@desktop-2x.webp" alt="">
+                                </picture>
+                            </div>
+                            <div class="item slide">
+                                <picture>
+                                    <source
+                                        srcset="./image/desktop/bose-nc-white@desktop-1x.webp 1x, ./image/desktop/bose-nc-white@desktop-2x.webp 2x"
+                                        media="(min-width: 1320px)">
                                     <img src="./image/desktop/bose-nc-white@desktop-2x.webp" alt="">
                                 </picture>
                             </div>
