--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -2,7 +2,7 @@
   width: 300px;
   padding: 0 10px;
   margin: 0 auto;
-  // outline: 1px solid red;
+ outline: 1px solid red;
 
   @media screen and (min-width: 768px) {
     width: 768px;
