--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,140 +1,169 @@
 <section class="reviews" id="reviews">
-    <div class="container slider" id="slideContainer">
-        <div class="slide show">
-            <ul class="reviews__fix">
-                <li class="reviews__box">
-                    <h2 class="reviews__subtitle">REVIEWS</h2>
-                    <iframe class="reviews__video" src="https://www.youtube.com/embed/VqP11Ma_2Fk"
-                        title="Bose | Bose Noise Cancelling Headphones 700 | Everybody’s Talking" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </li>
-                <li class="reviews__width">
-                    <h2 class="reviews__title">REVIEWS</h2>
-                    <h3 class="reviews__texted">Bose Сorporation</h3>
-                    <p class="reviews__text">Critically acclaimed for their powerful noise cancelling, astonishing
-                        sound, and unrivaled voice pickup, Bose Noise Cancelling Headphones 700 help turn any space into
-                        the perfect place to listen to music, get work done, or just shut out the world for a few
-                        moments and relax.</p>
-                    <div class="reviews__column-1">
-                        <h3 class="reviews__s">01 -</h3>
-                        <h3 class="reviews__minisubtext">02 - 03 - 04</h3>
+    <div class="container">
+        <div id="slideContainer">
+            <div class="slider">
+                <div class="list">
+                    <div class="item slide show">
+                        <ul class="reviews__fix">
+                            <li class="reviews__box">
+                                <h2 class="reviews__subtitle">REVIEWS</h2>
+                                <iframe class="reviews__video" src="https://www.youtube.com/embed/VqP11Ma_2Fk"
+                                    title="Bose | Bose Noise Cancelling Headphones 700 | Everybody’s Talking"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </li>
+                            <li class="reviews__width">
+                                <h2 class="reviews__title">REVIEWS</h2>
+                                <h3 class="reviews__texted">Bose Сorporation</h3>
+                                <p class="reviews__text-1">Critically acclaimed for their powerful noise cancelling,
+                                    astonishing
+                                    sound, and unrivaled voice pickup, Bose Noise Cancelling Headphones 700 help
+                                    turn any
+                                    space into
+                                    the perfect place to listen to music, get work done, or just shut out the world
+                                    for a
+                                    few
+                                    moments and relax.</p>
+                                <div class="reviews__column-1">
+                                    <h3 class="reviews__s">01 -</h3>
+                                    <h3 class="reviews__minisubtext">02 - 03 - 04</h3>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-            </ul>
-        </div>
-        <div class="slide">
-            <ul class="reviews__fix">
-                <li class="reviews__box">
-                    <h2 class="reviews__subtitle">REVIEWS</h2>
-                    <iframe class="reviews__video" src="https://www.youtube.com/embed/BUyLpf-u97Y"
-                        title="Bose Noise Cancelling Headphones 700 | Design and innovation as one" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </li>
-                <li class="reviews__width">
-                    <h2 class="reviews__title">REVIEWS</h2>
-                    <h3 class="reviews__texted">Bose Сorporation</h3>
-                    <p class="reviews__text">Bose Noise Cancelling Headphones 700 deliver everything you expect — and
-                        things you never imagined possible. The perfect balance of quiet, comfort, and sound.</p>
-                    <div class="reviews__column-2">
-                        <h3 class="reviews__minisubtext">01 -</h3>
-                        <p class="reviews__s">02 -</p>
-                        <h3 class="reviews__minisubtext">03 - 04</h3>
+                    <div class="item slide">
+                        <ul class="reviews__fix">
+                            <li class="reviews__box">
+                                <h2 class="reviews__subtitle">REVIEWS</h2>
+                                <iframe class="reviews__video" src="https://www.youtube.com/embed/BUyLpf-u97Y"
+                                    title="Bose Noise Cancelling Headphones 700 | Design and innovation as one"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </li>
+                            <li class="reviews__width">
+                                <h2 class="reviews__title">REVIEWS</h2>
+                                <h3 class="reviews__texted">Bose Сorporation</h3>
+                                <p class="reviews__text-2">Bose Noise Cancelling Headphones 700 deliver everything you
+                                    expect
+                                    — and
+                                    things you never imagined possible. The perfect balance of quiet, comfort, and
+                                    sound.
+                                </p>
+                                <div class="reviews__column-2">
+                                    <h3 class="reviews__minisubtext">01 -</h3>
+                                    <p class="reviews__s">02 -</p>
+                                    <h3 class="reviews__minisubtext">03 - 04</h3>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-            </ul>
-        </div>
-        <div class="slide">
-            <ul class="reviews__fix">
-                <li class="reviews__box">
-                    <h2 class="reviews__subtitle">REVIEWS</h2>
-                    <iframe class="reviews__video" src="https://www.youtube.com/embed/NgtznBDFRUo"
-                        title="Bose | Power of Sound - Open Your Heart and Mind with Infinite Possibilities"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </li>
-                <li class="reviews__width">
-                    <h2 class="reviews__title">REVIEWS</h2>
-                    <h3 class="reviews__texted">Bose Сorporation</h3>
-                    <p class="reviews__text">Real stories of people tuning in or out to feel peace, find escape, and for
-                        self-care.</p>
-                    <div class="reviews__column-3">
-                        <h3 class="reviews__minisubtext">01 - 02 -</h3>
-                        <p class="reviews__s">03 -</p>
-                        <h3 class="reviews__minisubtext">04</h3>
+                    <div class="item slide">
+                        <ul class="reviews__fix">
+                            <li class="reviews__box">
+                                <h2 class="reviews__subtitle">REVIEWS</h2>
+                                <iframe class="reviews__video" src="https://www.youtube.com/embed/NgtznBDFRUo"
+                                    title="Bose | Power of Sound - Open Your Heart and Mind with Infinite Possibilities"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </li>
+                            <li class="reviews__width">
+                                <h2 class="reviews__title">REVIEWS</h2>
+                                <h3 class="reviews__texted">Bose Сorporation</h3>
+                                <p class="reviews__text-3">Real stories of people tuning in or out to feel peace, find
+                                    escape,
+                                    and for
+                                    self-care.</p>
+                                <div class="reviews__column-3">
+                                    <h3 class="reviews__minisubtext">01 - 02 -</h3>
+                                    <p class="reviews__s">03 -</p>
+                                    <h3 class="reviews__minisubtext">04</h3>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-            </ul>
-        </div>
-        <div class="slide">
-            <ul class="reviews__fix">
-                <li class="reviews__box">
-                    <h2 class="reviews__subtitle">REVIEWS</h2>
-                    <iframe class="reviews__video" src="https://www.youtube.com/embed/VqP11Ma_2Fk"
-                        title="Bose | Bose Noise Cancelling Headphones 700 | Everybody’s Talking" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </li>
-                <li class="reviews__width">
-                    <h2 class="reviews__title">REVIEWS</h2>
-                    <h3 class="reviews__texted">Bose Сorporation</h3>
-                    <p class="reviews__text">Critically acclaimed for their powerful noise cancelling, astonishing
-                        sound, and unrivaled voice pickup, Bose Noise Cancelling Headphones 700 help turn any space into
-                        the perfect place to listen to music, get work done, or just shut out the world for a few
-                        moments and relax.</p>
-                    <div class="reviews__column-1">
-                        <h3 class="reviews__s">01 -</h3>
-                        <h3 class="reviews__minisubtext">02 - 03 - 04</h3>
+                    <div class="item slide">
+                        <ul class="reviews__fix">
+                            <li class="reviews__box">
+                                <h2 class="reviews__subtitle">REVIEWS</h2>
+                                <iframe class="reviews__video" src="https://www.youtube.com/embed/VqP11Ma_2Fk"
+                                    title="Bose | Bose Noise Cancelling Headphones 700 | Everybody’s Talking"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </li>
+                            <li class="reviews__width">
+                                <h2 class="reviews__title">REVIEWS</h2>
+                                <h3 class="reviews__texted">Bose Сorporation</h3>
+                                <p class="reviews__text-1">Critically acclaimed for their powerful noise cancelling,
+                                    astonishing
+                                    sound, and unrivaled voice pickup, Bose Noise Cancelling Headphones 700 help
+                                    turn any
+                                    space into
+                                    the perfect place to listen to music, get work done, or just shut out the world
+                                    for a
+                                    few
+                                    moments and relax.</p>
+                                <div class="reviews__column-1">
+                                    <h3 class="reviews__s">01 -</h3>
+                                    <h3 class="reviews__minisubtext">02 - 03 - 04</h3>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-            </ul>
-        </div>
-        <div class="slide">
-            <ul class="reviews__fix">
-                <li class="reviews__box">
-                    <h2 class="reviews__subtitle">REVIEWS</h2>
-                    <iframe class="reviews__video" src="https://www.youtube.com/embed/BUyLpf-u97Y"
-                        title="Bose Noise Cancelling Headphones 700 | Design and innovation as one" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </li>
-                <li class="reviews__width">
-                    <h2 class="reviews__title">REVIEWS</h2>
-                    <h3 class="reviews__texted">Bose Сorporation</h3>
-                    <p class="reviews__text">Bose Noise Cancelling Headphones 700 deliver everything you expect — and
-                        things you never imagined possible. The perfect balance of quiet, comfort, and sound.</p>
-                    <div class="reviews__column-2">
-                        <h3 class="reviews__minisubtext">01 -</h3>
-                        <p class="reviews__s">02 -</p>
-                        <h3 class="reviews__minisubtext">03 - 04</h3>
+                    <div class="item slide">
+                        <ul class="reviews__fix">
+                            <li class="reviews__box">
+                                <h2 class="reviews__subtitle">REVIEWS</h2>
+                                <iframe class="reviews__video" src="https://www.youtube.com/embed/BUyLpf-u97Y"
+                                    title="Bose Noise Cancelling Headphones 700 | Design and innovation as one"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </li>
+                            <li class="reviews__width">
+                                <h2 class="reviews__title">REVIEWS</h2>
+                                <h3 class="reviews__texted">Bose Сorporation</h3>
+                                <p class="reviews__text-2">Bose Noise Cancelling Headphones 700 deliver everything you
+                                    expect — and
+                                    things you never imagined possible. The perfect balance of quiet, comfort, and
+                                    sound.</p>
+                                <div class="reviews__column-2">
+                                    <h3 class="reviews__minisubtext">01 -</h3>
+                                    <p class="reviews__s">02 -</p>
+                                    <h3 class="reviews__minisubtext">03 - 04</h3>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-            </ul>
-        </div>
-        <div class="slide">
-            <ul class="reviews__fix">
-                <li class="reviews__box">
-                    <h2 class="reviews__subtitle">REVIEWS</h2>
-                    <iframe class="reviews__video" src="https://www.youtube.com/embed/NgtznBDFRUo"
-                        title="Bose | Power of Sound - Open Your Heart and Mind with Infinite Possibilities"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </li>
-                <li class="reviews__width">
-                    <h2 class="reviews__title">REVIEWS</h2>
-                    <h3 class="reviews__texted">Bose Сorporation</h3>
-                    <p class="reviews__text">Real stories of people tuning in or out to feel peace, find escape, and for
-                        self-care.</p>
-                    <div class="reviews__column-3">
-                        <h3 class="reviews__minisubtext">01 - 02 -</h3>
-                        <p class="reviews__s">03 -</p>
-                        <h3 class="reviews__minisubtext">04</h3>
+                    <div class="item slide">
+                        <ul class="reviews__fix">
+                            <li class="reviews__box">
+                                <h2 class="reviews__subtitle">REVIEWS</h2>
+                                <iframe class="reviews__video" src="https://www.youtube.com/embed/NgtznBDFRUo"
+                                    title="Bose | Power of Sound - Open Your Heart and Mind with Infinite Possibilities"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </li>
+                            <li class="reviews__width">
+                                <h2 class="reviews__title">REVIEWS</h2>
+                                <h3 class="reviews__texted">Bose Сorporation</h3>
+                                <p class="reviews__text-3">Real stories of people tuning in or out to feel peace, find
+                                    escape, and for
+                                    self-care.</p>
+                                <div class="reviews__column-3">
+                                    <h3 class="reviews__minisubtext">01 - 02 -</h3>
+                                    <p class="reviews__s">03 -</p>
+                                    <h3 class="reviews__minisubtext">04</h3>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
     </div>
 </section>
