--- a/src/sass/sections/_bose-nc.scss
+++ b/src/sass/sections/_bose-nc.scss
@@ -6,7 +6,7 @@
         margin-bottom: 100px;
     }
 
-    @media screen and (min-width:1200px) {
+    @media screen and (min-width:1320px) {
         margin-bottom: 170px;
         padding-bottom: -5px;
     }
@@ -34,7 +34,7 @@
             margin-bottom: 32px;
         }
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1320px) {
             color: #E7E7E7;
             font-size: 54px;
             font-style: normal;
@@ -68,7 +68,7 @@
 
         @media screen and (min-width:768px) {}
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1320px) {
             width: 69px;
             height: 69px;
         }
@@ -82,7 +82,7 @@
 
         @media screen and (min-width:768px) {}
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1320px) {
             margin-top: 43px;
             margin-bottom: 43px;
         }
@@ -101,8 +101,10 @@
             width: 673px;
         }
 
-        @media screen and (min-width:1200px) {
-            margin-right: 109px;
+        @media screen and (min-width:1320px) {
+            margin-right: 19px;
+            width: 359px;
+            font-size: 16px;
         }
     }
 
@@ -118,7 +120,7 @@
 
         @media screen and (min-width:768px) {}
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1320px) {
             width: 69px;
             height: 69px;
         }
@@ -133,7 +135,7 @@
 
         @media screen and (min-width:768px) {}
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1320px) {
             width: 50px;
             height: 50px;
         }
@@ -148,7 +150,7 @@
 
         @media screen and (min-width:768px) {}
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1320px) {
             width: 50px;
             height: 50px;
         }
@@ -193,7 +195,7 @@
             flex-shrink: 0;
         }
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1320px) {
             color: #DF3D3A;
             font-size: 54px;
             font-style: normal;
@@ -201,6 +203,7 @@
             margin-top: 50px;
             font-weight: 600;
             line-height: 120%;
+            width: 350px;
             /* 64.8px */
             letter-spacing: 1.08px;
             text-transform: uppercase;
@@ -237,7 +240,7 @@
             margin-top: 32px;
         }
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1320px) {
             color: rgba(255, 255, 255, 0.90);
             font-size: 20px;
             background: #DF3D3A;
@@ -272,7 +275,7 @@
             width: 705px;
         }
 
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width:1320px) {
             width: 400px;
         }
     }
@@ -296,14 +299,23 @@
 }
 
 .slide {
-    display: none;
-    width: 100%;
-}
+     display: none;
+     width: 100%; }
 
 .show {
-    display: block;
-    animation: fadein 1.2s ease-in-out forwards;
-}
+         display: block;
+   animation: fadein 1.2s ease-in-out forwards;
+ }
+
+// .slide {
+//     opacity: 0;   
+//     transition: opacity 1s ease-in-out;
+// }
+
+// .show {
+//     opacity: 1;
+//     visibility: visible;
+// }
 
 @keyframes fadein {
     from {
@@ -319,7 +331,7 @@
 .decktop {
     display: none;
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1320px) {
         display: block;
     }
 }
@@ -334,7 +346,7 @@
         flex-shrink: 0;
     }
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1320px) {
         display: none;
     }
 }
@@ -354,7 +366,18 @@
         height: 440px;
     }
 
-    @media screen and (min-width:1200px) {
+    @media screen and (min-width:1320px) {
         display: none;
     }
 }
+
+// .item {
+//     display: none;
+//     opacity: 0;
+//     transition: opacity 0.5s;
+// }
+
+// .item.show {
+//     display: block;
+//     opacity: 1;
+// }
