ce bce co i mig

--- a/src/partials/bose-nc.html
+++ b/src/partials/bose-nc.html
@@ -125,7 +125,7 @@
                 </button>
             </li>
             <li>
-                <div id="slideContainer" class="decktop">
+                <div id="slideContainer" class="desktop">
                     <div class="slider">
                         <div class="list">
                             <div class="item slide show">
@@ -176,7 +176,17 @@
                                     <img src="./image/desktop/bose-nc-white@desktop-2x.webp" alt="">
                                 </picture>
                             </div>
+                            <button class="nav-button prev" onclick="prevSlide()">&#10094;</button>
+                            <button class="nav-button next" onclick="nextSlide()">&#10095;</button>
                         </div>
+                    <div class="dots-container">
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                    </div>
                     </div>
                 </div>
                 <!-- </div> -->
