--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -7,10 +7,11 @@
       </li>
     </ul>
     <div class="feedback__boxing">
-      <form action="" class="feedback__form">
+      <form>
         <ul class="feedback__list">
           <li class="feedback__item">
             <input
+              required
               placeholder="Your name"
               class="feedback__input"
               type="text"
@@ -20,6 +21,7 @@
           </li>
           <li class="feedback__item">
             <input
+              required
               placeholder="Your e-mail"
               type="email"
               class="feedback__input"
@@ -29,6 +31,7 @@
           </li>
           <li class="feedback__item">
             <input
+              required
               placeholder="Send us a message"
               type="message"
               class="feedback__textarea"
@@ -39,6 +42,7 @@
         </ul>
         <div class="feedback__checkbox">
           <input
+            required
             type="checkbox"
             class="feedback__sqauare"
             name="privacy-policy"
