--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="footer__container">
+    <div class="container">
         <div class="footer__box">
             <div class="footer__boxes">
                 <ul class="footer__list">
